--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StarWars.com|The Offical StarWars website</title>
-    <link ref="text/css" rel= "stylesheet" href="98-static.page.css">
+    <link ref="text/css" rel= "stylesheet" href="Static.css">
 </head>
 <body class="God">
   <div class = "Help">
     <nav>
      <p><a href="https://www.starwars.com/" >
-         <img src="..\3-assets\StarWarsLogo.jpg">
+         <img src="..\assets\StarWarsLogo.jpg">
          </a></p>
     </nav>
 </div> 
@@ -18,7 +18,7 @@
     <nav>
       <p>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-          <img src="..\3-assets\Facebook.JPG">
+          <img src="..\assets\Facebook.JPG">
         </a>"
       </p>
     </nav>
@@ -27,7 +27,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\3-assets\Instagram.JPG">
+        <img src="..\assets\Instagram.JPG">
       </a>"
     </p>
   </nav>
@@ -36,7 +36,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\3-assets\Twitter.JPG">
+        <img src="..\assets\Twitter.JPG">
       </a>"
     </p>
   </nav>
@@ -45,7 +45,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\3-assets\TwitterReal.JPG">
+        <img src="..\assets\TwitterReal.JPG">
       </a>"
     </p>
   </nav>
@@ -54,7 +54,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\3-assets\Youtube.JPG">
+        <img src="..\assets\Youtube.JPG">
       </a>"
     </p>
   </nav>
@@ -71,49 +71,49 @@
 <div class= "Kobe">
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\3-assets\NEWSBLOG.JPG">
+        <img src="..\assets\NEWSBLOG.JPG">
       </a>"
     </p>
 </div>
 <div class= "Kobe2">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\VIDEO.JPG">
+      <img src="..\assets\VIDEO.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe3">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\FILMS.JPG">
+      <img src="..\assets\FILMS.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe4">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\SERIES.JPG">
+      <img src="..\assets\SERIES.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe5">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\INTERACTIVE.JPG">
+      <img src="..\assets\INTERACTIVE.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe6">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\COMMUNITY.JPG">
+      <img src="..\assets\COMMUNITY.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe7">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\3-assets\Capture.JPG">
+      <img src="..\assets\Capture.JPG">
     </a>"
   </p>
 </div>
