--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
   </p>
 </div>
 <div class="Clone">
-  <img class= "resize" src="..\3-assets\Clone4.JPG" >
+  <img class= "resize" src="..\assets\Clone4.JPG" >
 </div>
 <div class="Clone2">
-  <img class= "resize2" src="..\3-assets\REpub.JPG" >
+  <img class= "resize2" src="..\assets\REpub.JPG" >
 </div>
 </body>
 </html>
