--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class = "Help">
     <nav>
      <p><a href="https://www.starwars.com/" >
-         <img src="..\assets\StarWarsLogo.jpg">
+         <img src="\assets\StarWarsLogo.jpg">
          </a></p>
     </nav>
 </div> 
@@ -18,7 +18,7 @@
     <nav>
       <p>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-          <img src="..\assets\Facebook.JPG">
+          <img src="\assets\Facebook.JPG">
         </a>"
       </p>
     </nav>
@@ -27,7 +27,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\assets\Instagram.JPG">
+        <img src="\assets\Instagram.JPG">
       </a>"
     </p>
   </nav>
@@ -36,7 +36,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\assets\Twitter.JPG">
+        <img src="\assets\Twitter.JPG">
       </a>"
     </p>
   </nav>
@@ -45,7 +45,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\assets\TwitterReal.JPG">
+        <img src="\assets\TwitterReal.JPG">
       </a>"
     </p>
   </nav>
@@ -54,7 +54,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\assets\Youtube.JPG">
+        <img src="\assets\Youtube.JPG">
       </a>"
     </p>
   </nav>
@@ -71,57 +71,58 @@
 <div class= "Kobe">
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src="..\assets\NEWSBLOG.JPG">
+        <img src="\assets\NEWSBLOG.JPG">
       </a>"
     </p>
 </div>
 <div class= "Kobe2">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\VIDEO.JPG">
+      <img src="\assets\VIDEO.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe3">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\FILMS.JPG">
+      <img src="\assets\FILMS.JPG">
     </a>"
+    
   </p>
 </div>
 <div class= "Kobe4">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\SERIES.JPG">
+      <img src="\assets\SERIES.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe5">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\INTERACTIVE.JPG">
+      <img src="\assets\INTERACTIVE.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe6">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\COMMUNITY.JPG">
+      <img src="\assets\COMMUNITY.JPG">
     </a>"
   </p>
 </div>
 <div class= "Kobe7">
   <p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-      <img src="..\assets\Capture.JPG">
+      <img src="\assets\Capture.JPG">
     </a>"
   </p>
 </div>
 <div class="Clone">
-  <img class= "resize" src="..\assets\Clone4.JPG" >
+  <img class= "resize" src="\assets\Clone4.JPG" >
 </div>
 <div class="Clone2">
-  <img class= "resize2" src="..\assets\REpub.JPG" >
+  <img class= "resize2" src="\assets\REpub.JPG" >
 </div>
 </body>
 </html>
