--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class = "Help">
     <nav>\
      <p><a href="https://www.starwars.com/" >
-         <img src=".\assets\StarWarsLogo.jpg">
+         <img src=".\assets\StarWarsLogo.JPG">
          </a></p>
     </nav>
 </div> 
@@ -54,7 +54,7 @@
   <nav>
     <p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO">
-        <img src=".\assets\Youtube.JPG">
+        <img src=".\assets\YouTube.JPG">
       </a>"
     </p>
   </nav>
@@ -119,10 +119,10 @@
   </p>
 </div>
 <div class="Clone">
-  <img class= "resize" src=".\assets\Clone4.JPG" >
+  <img class= "resize" src=".\assets\Clone4.jpg" >
 </div>
 <div class="Clone2">
-  <img class= "resize2" src=".\assets\REpub.JPG" >
+  <img class= "resize2" src=".\assets\REpub.jpg" >
 </div>
 </body>
 </html>
